<resources>
    <string name="app_name" translatable="false">Pottable</string>
    <string name="title_activity_navtab" translatable="false">navtab</string>
    <string name="tab_text_1">Database</string>
    <string name="tab_text_2">My Pots</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search for plant names&#8230;</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_lang">Language</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_refresh">Performance</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_about" translatable="false">About</string>
    <string name="about_slogan">Planting made easier</string>
    <string name="about_version" translatable="false">v0.0000001 lol</string>
    <string name="database_category_separator">CATEGORIES</string>
    <string name="database_wizard_prompt">Don\'t know which to plant?</string>
    <string name="database_wizard_click">HELP ME CHOOSE</string>
    <string name="cat_common">COMMON</string>
    <string name="cat_common_desc">Ordinary plants, fit for any purpose.</string>
    <string name="cat_foliage">FOLIAGE</string>
    <string name="cat_foliage_desc">Big, beautiful leaves for decorative purposes.</string>
    <string name="cat_succulent">SUCCULENT</string>
    <string name="cat_succulent_desc">Description here.</string>
    <string name="cat_unusual">UNUSUAL</string>
    <string name="cat_unusual_desc">Description here.</string>
    <string name="database_cat_separator">CATEGORIES</string>
</resources>
