<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="tpp.pottable.settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/pref_header_lang" />
    <header
        android:fragment="tpp.pottable.settings$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_refresh" />
    <header
        android:fragment="tpp.pottable.settings$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />
    <header
        android:fragment="tpp.pottable.settings$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about" />

</preference-headers>
